--- a/index.html
+++ b/index.html
@@ -144,7 +144,8 @@
 					<div class="row">
 						<div class="8u 12u$(medium)">
 							<ul class="copyright">
-								<li>&copy; ARJUN. All rights reserved.</li>
+								<li>&copy; ARJUN. All rights reserved 2020.</li>
+                                                                <li>Powered by <a href="https://wafture.websites.co.in/">WAFTURE</a></li>
 							</ul>
 						</div>
 						<div class="4u$ 12u$(medium)">
