--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
 			<link rel="stylesheet" href="css/style-xlarge.css" />
 		</noscript>
 	</head>
+        <a name="top"></a>
 	<body class="landing">
 
 		<!-- Header -->
@@ -25,7 +26,8 @@
 				<nav id="nav">
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="#" class="button special">Sign Up</a></li>
+                                                <li><a href="https://wafture.websites.co.in/">Wafture</a></li>
+						<li><a href="https://christcollegeijk.edu.in/" class="button special">Sign Up</a></li>
 					</ul>
 				</nav>
 			</header>
@@ -36,7 +38,7 @@
 				<p>Computer Science Department</p>
 				<ul class="actions">
 					<li>
-						<a href="#" class="button big">WELCOME</a>
+						<a href="https://christcollegeijk.edu.in/" class="button big">WELCOME</a>
 					</li>
 				</ul>
 			</section>
@@ -46,7 +48,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>COMPUTER SCINCE</h2>
-						<p>Christ College is part of a century -It offers an ideal vision of education that is aware of and responsive to the challenges of the nation’s present situation..</p>
+						<p>Computer science is the study of computation and information. Computer science deals with theory of computation, algorithms, computational problems and the design of computer systems hardware, software and applications.</p>
 					</header>
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
@@ -137,6 +139,7 @@
 					</form>
 				</div>
 			</section>
+                       <center><a href="#top"><p>&uarr;<br> Go To Top</p></a></center>
 
 		<!-- Footer -->
 			<footer id="footer">
