--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<div class="4u$ 12u$(medium)">
 							<section class="box">
 								<i class="icon big rounded color6 fa-rocket"></i>
-								<h3><u><a href="gallery.html">GALLERY</a></u></h3>
+								<h3><u><a href="opacity.html">GALLERY[opacity]</a></u></h3>
 								<p>To understand what our Lives mean to us</p>
 							</section>
 						</div>
